name:                data-vcr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KSF-Media/data-vcr#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          co@zudov.me
copyright:           2018 KSF Media
category:            Web, Networking, Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.VCR, Data.Vcr
  build-depends:       base >= 4.7 && < 5,
                       bytestring,
                       vector,
                       case-insensitive,
                       text,
                       unordered-containers,
                       time,
                       http-types,
                       aeson,
                       yaml
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/data-vcr
