name:                http-client-vcr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KSF-Media/haskell-vcr#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          co@zudov.me
copyright:           2018 KSF Media
category:            Web, Networking, Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Network.HTTP.Client.Vcr
  build-depends:       base >= 4.7 && < 5,
                       data-vcr,
                       http-client,
                       aeson,
                       exceptions,
                       bytestring,
                       time,
                       containers,
                       http-types
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/KSF-Media/haskell-vcr