name:                tasty-vcr
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/KSF-Media/data-vcr#readme
license:             BSD3
license-file:        LICENSE
author:              Konstantin Zudov
maintainer:          co@zudov.me
copyright:           2018 KSF Media
category:            Web, Networking, Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Test.Tasty.Vcr
  build-depends:       base >= 4.7 && < 5,
                       tasty,
                       data-vcr,
                       optparse-applicative
  default-language:    Haskell2010

executable tasty-vcr-example
  hs-source-dirs: examples
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       tasty,
                       data-vcr,
                       tasty,
                       tasty-vcr,
                       tasty-hunit

source-repository head
  type:     git
  location: https://github.com/githubuser/data-vcr
